# PyCharmMiscProject

./: .gitignore  LICENSE  Makefile  New.py  QUICK_REFERENCE.md  README.md  pyproject.toml  run_tests.py  setup-git.ps1
.github/workflows/: tests.yml
Instructions/: ADDITIONAL_ENHANCEMENTS.md  CONTRIBUTING.md  GITHUB_PUSH_GUIDE.md  GITHUB_REPO_SETUP.md  GIT_CONFIG_SUMMARY.md  GIT_INIT_GUIDE.md  GIT_SETUP_GUIDE.md  GIT_WORKFLOW.md  INDEX.md  OPTICAL_FIBER_SIMULATION.md  PACKAGES_INSTALLED.md  PACKAGES_QUICK_REFERENCE.md  PUSH_TO_GITHUB_QUICK_GUIDE.md  README.md  REFERENCE_CARD.txt
scripts/: run_tests.py
src/pycharmmiscproject/: __init__.py  utils.py
tests/: conftest.py  test_normalize.py
